--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,9 @@
 .env.test.local
 .env.production.local
 .env
-/src/services/.key.js
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+/src/services/key.js
